# src/swagger.json
@@ -1075,6 +1075,239 @@
           }
         }
       }
+    },
+    "/api/v1/products/comments": {
+      "post": {
+        "tags": [
+          "Products"
+        ],
+        "description": "Create product's comments",
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "body request option",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "authorId": {
+                  "type": "string"
+                },
+                "productId": {
+                  "type": "string"
+                },
+                "text": {
+                  "type": "string"
+                },
+                "rating": {
+                  "type": "number",
+                  "maximum": 5,
+                  "minimum": 1
+                },
+                "visible": {
+                  "type": "boolean"
+                }
+              },
+              "required": ["productId", "text"]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/comments"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Products"
+        ],
+        "description": "get all comments",
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/comments"
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Products"
+        ],
+        "description": "update comment",
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "body request option",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "string"
+                },
+                "authorId": {
+                  "type": "string"
+                },
+                "productId": {
+                  "type": "string"
+                },
+                "text": {
+                  "type": "string"
+                },
+                "rating": {
+                  "type": "number",
+                  "maximum": 5,
+                  "minimum": 1
+                },
+                "visible": {
+                  "type": "boolean"
+                }
+              },
+              "required": ["id","productId", "text"]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/comments"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/api/v1/products/comments/:id": {
+      "get": {
+        "tags": [
+          "Products"
+        ],
+        "description": "get comment by id",
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "description": "comment's id",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/comments"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Products"
+        ],
+        "description": "remove comments by id",
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "id",
+            "description": "comments id",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/simpleOk"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -1205,7 +1438,7 @@
       "type": "object",
       "properties": {
         "id": {
-          "type": "integer"
+          "type": "string"
         },
         "productId": {
           "type": "integer"
@@ -1222,19 +1455,22 @@
       "type": "object",
       "properties": {
         "id": {
-          "type": "integer"
-        },
-        "label": {
           "type": "string"
         },
-        "name": {
+        "productId": {
+          "type": "string"
+        },
+        "authorId": {
           "type": "string"
         },
         "text": {
           "type": "string"
         },
-        "mark": {
-          "type": "integer"
+        "rating": {
+          "type": "number"
+        },
+        "visible": {
+          "type": "boolean"
         }
       }
     },
